# agse2015

./: .gitignore  README.md
code/: agse  arduinoConnection.py  jetson_dynamixel_xl320.py
code/AGSE_ROSMOD/: agse.rosml
code/AGSE_ROSMOD/agse/src/agse_package/: CMakeLists.txt  package.xml
code/AGSE_ROSMOD/agse/src/agse_package/include/agse_package/: Dynamixel.h  arm_controller.hpp  arm_rotation_controller.hpp  eqep.h  gripper_controller.hpp  image_processor.hpp  radial_actuator_controller.hpp  servo_controller.hpp  user_input_controller.hpp  vertical_actuator_controller.hpp
code/AGSE_ROSMOD/agse/src/agse_package/src/agse_package/: Dynamixel.cpp  SerialPort.cpp  arm_controller.cpp  arm_rotation_controller.cpp  camera_main.cpp  eqep.cpp  gpio.cpp  gripper_controller.cpp  gripper_main.cpp  image_processor.cpp  positioning_main.cpp  radial_actuator_controller.cpp  servo_controller.cpp  user_input_controller.cpp  vertical_actuator_controller.cpp
code/AGSE_ROSMOD/agse/src/agse_package/srv/: setGripperRotation.srv
code/ArduinoUno_Dynamixel_XL320_sample/sample/: HelloSpoon.cpp  sample.ino
code/Real-Time-Edge-Detection-with-OpenCV/: Canny_Edge_Detector.cpp  Canny_Edge_Detector.h  Makefile  README.md  main.cpp
code/UIP/src/: Makefile  uip  uip.cpp
code/agse_rosmod_project/01-Software-Configuration/: agse.rml
code/agse_rosmod_project/01-Software-Configuration/agse/src/agse_package/: CMakeLists.txt
code/agse_rosmod_project/01-Software-Configuration/agse/src/agse_package/include/agse_package/: Component.hpp  Dynamixel.h  Image_Processor.h  Logger.hpp  Object_Tracker.h  arm_controller.hpp  image_processor.hpp  image_sensor.hpp  payloadbay_detector.hpp  radial_actuator_controller.hpp  sample_detector.hpp  servo_controller.hpp  uip.h  user_input_controller.hpp  user_input_imager.hpp  vertical_actuator_controller.hpp  xmlParser.hpp
code/agse_rosmod_project/01-Software-Configuration/agse/src/agse_package/msg/: controlInputs.msg  payloadBayOrientation.msg  payloadBayPosition.msg
code/agse_rosmod_project/01-Software-Configuration/agse/src/agse_package/src/agse_package/: Component.cpp  Dynamixel.cpp  Image_Processor_Library.cpp  Logger.cpp  Object_Tracker.cpp  arm_controller.cpp  arm_main.cpp  detector_main.cpp  image_processor.cpp  image_sensor.cpp  imager_main.cpp  payloadbay_detector.cpp  positioning_main.cpp  radial_actuator_controller.cpp  sample_detector.cpp  servo_controller.cpp  servos_main.cpp  user_input_controller.cpp  user_input_imager.cpp  user_input_main.cpp  v4l2uvc.c  vertical_actuator_controller.cpp
code/agse_rosmod_project/01-Software-Configuration/agse/src/agse_package/src/aruco/: cvdrawingutils.cpp  marker.cpp  markerdetector.cpp
code/agse_rosmod_project/01-Software-Configuration/agse/src/agse_package/srv/: armRotation.srv  captureImage.srv  payloadBayStateFromImage.srv  sampleStateFromImage.srv
code/agse_rosmod_project/02-Hardware-Configuration/: Hardware.rhw
code/agse_rosmod_project/03-Deployment/: Deployment.rdp
code/agse_rosmod_project/04-AGSE_Executables/: arm  detector  imager  positioning  servos  user_input
code/agse_rosmod_v3/01-Software/: agse.rml
code/agse_rosmod_v3/01-Software/agse/src/high_level_control/: CMakeLists.txt  package.xml
code/agse_rosmod_v3/01-Software/agse/src/high_level_control/include/high_level_control/: Component.hpp  arm_controller.hpp  (+2 more)
code/agse_rosmod_v3/01-Software/agse/src/high_level_control/msg/: payloadBayState.msg  sampleOrientation.msg  sampleState.msg
code/agse_rosmod_v3/01-Software/agse/src/image_processing/: CMakeLists.txt  package.xml
code/agse_rosmod_v3/01-Software/agse/src/motor_control/: CMakeLists.txt  package.xml
code/agse_rosmod_v3/01-Software/agse/src/motor_control/include/motor_control/: Component.hpp  radial_actuator_controller.hpp  servo_controller.hpp  vertical_actuator_controller.hpp  xmlParser.hpp
code/agse_rosmod_v3/01-Software/agse/src/motor_control/src/motor_control/: Component.cpp  Logger.cpp  radial_actuator_controller.cpp  servo_controller.cpp  vertical_actuator_controller.cpp
code/agse_rosmod_v3/01-Software/msg/: high_level_control.controlInputs.msg  image_processing.sampleDetectionImages.msg
code/agse_rosmod_v3/01-Software/srv/: motor_control.radialPos.srv
code/agse_rosmod_v3/02-Hardware/: agse.rhw
code/agse_rosmod_v3/03-Deployment/: agse.rdp
code/analogSerialPWM/: analogSerialPWM.ino
code/encoder_test/: encoder_test.py
code/find_jetson/: find_jetson.sh
code/xl320/: jetson_dynamixel_xl320.py  xl320_notes.md
design/: Article.md  DevelopmentPlan.txt  FailureStrategies.txt  ImageProcessingDesign.txt  PerformanceMetrics.txt  PowerRequirements.txt  SafetyDesign.txt  Scientific_Justification.txt  SystemGoals.txt  VerificationPlan.txt  powerBoM.xlsx
design/FRR/: CDR_ChangesSincePDR.txt  design.md
design/PLAR/: NASA PLAR AGSE.txt
design/schematics/: PayloadBay.brd  PayloadBay.sch  advancedCircuitsReceipt_AGSE_BBB_CAPE.oxps  max16907saue_sla_v_plu_.bxl  maxim16907.lbr  molex-spox.lbr
design/schematics/ArmControl/: AGSE_BBB_cape.GBL  AGSE_BBB_cape.GBO  AGSE_BBB_cape.GBS  AGSE_BBB_cape.GTL  AGSE_BBB_cape.GTO  AGSE_BBB_cape.GTP  AGSE_BBB_cape.GTS  AGSE_BBB_cape.TXT  AGSE_BBB_cape.brd  AGSE_BBB_cape.dri  AGSE_BBB_cape.gpi  AGSE_BBB_cape.sch  AGSE_Motor_Controller.brd  AGSE_Motor_Controller.sch  BOM.txt  BOM.xlsx  bmp.scr  eagle.epf  jetsonSerialBuffer.brd  jetsonSerialBuffer.sch  jetsonToServoBuffer.sch
design/schematics/PayloadBay/: PayloadBay.brd  PayloadBay.sch  eagle.epf
design/statechart/: agse_design_statechart.pptx
references/AX12/: ax12.cpp~  ax12.h~
references/AX12/CPP_AXControl/Debug/: CPP_AXControl  makefile
references/AX12/CPP_AXControl/Debug/src/: CPP_AXControl.d  Dynamixel.d  subdir.mk
references/AX12/CPP_AXControl/src/: CPP_AXControl.cpp  Dynamixel.cpp  Dynamixel.h
references/BBB/: README.md  bone_eqep2b.dts  uEnv.txt  uart1.dts
references/NVIDIA Jetson TK1/: pyserial_example.py
references/markerDetection/: camera.yml  camera2.yml  camera3.yml  camera4.yml  testBoardConfig.yml
references/uvccapture/: uvccapture.c
(+14 files in other folders)
